the french are here!

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@
 </body>
 
 <!--This actually renders the map-->
-<script src="../api/leaflet/leaflet.js"></script>
+<script type="module" src="../api/leaflet/leaflet.js"></script>
 
 </html>
