added country interactivity, added helper method for debugging circular js structures, created a supercontinent

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
     <div id="map"></div>
 </body>
 
-<!--Call the countries_coordinates.js file first so that leaflet.js can access the global variable (avoids using modules)-->
-<script src="../assets/geojson/countries_coordinates.js"></script>
+<!--Call the countries' files first so that leaflet.js can access the global variables (avoids using modules)-->
+<script src="../assets/geojson/north_america.js"></script>
+<script src="../assets/geojson/south_america.js"></script>
 
 <!--This actually renders the map-->
 <script src="../api/leaflet/leaflet.js"></script>
