--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,20 @@
     integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
     crossorigin=""></script>
 
-    <link rel="stylesheet" href="../assets/css/index.css"></link>   
+    <link rel="stylesheet" href="../assets/css/index.css"></link>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script>
+        
+    </script>
 </head>
 
 <body>
     <div id="map"></div>
     <div id="sidebar">
         <h1 id="name"></h1>
+        <p style="text-align:right;"><a id="close" href="javascript:void(0)" onclick="hide()"><i class="fa fa-close" style="font-size:1.5em; color:black;"></i></a></p>
     </div>
 </body>
 
