changed bounds control for zooming

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
 <body>
     <div id="map"></div>
     <div id="sidebar">
+        <p style="text-align:right;"><a id="close" href="javascript:void(0)" onclick="hideSidebar()"><i class="fa fa-close" style="font-size:1.5em; color:black;"></i></a></p>
         <h1 id="name"></h1>
-        <p style="text-align:right;"><a id="close" href="javascript:void(0)" onclick="hide()"><i class="fa fa-close" style="font-size:1.5em; color:black;"></i></a></p>
     </div>
 </body>
 
