--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,16 @@
 <body>
     <div id="map"></div>
     <div id="sidebar">
-        <p style="text-align:right;"><a id="close" href="javascript:void(0)" onclick="hideSidebar()"><i class="fa fa-close" style="font-size:1.5em; color:black;"></i></a></p>
-        <h1 id="name"></h1>
+        <div id="sidebar-title">
+            <span style="display: inline-block;"><h1 id="name"></h1></span>
+            <span style="display: inline-block;">
+                <p style="text-align:right;">
+                    <a id="close" href="javascript:void(0)" onclick="hideSidebar()">
+                        <i class="fa fa-close" id="close-text" style="font-size:2.5em; color:black;"></i>
+                    </a>
+                </p>
+            </span>
+        </div>
     </div>
 </body>
 
