fixed zoom (somewhat) and added all continents

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,10 @@
 <!--Call the countries' files first so that leaflet.js can access the global variables (avoids using modules)-->
 <script src="../assets/geojson/north_america.js"></script>
 <script src="../assets/geojson/south_america.js"></script>
+<script src="../assets/geojson/asia.js"></script>
+<script src="../assets/geojson/australia.js"></script>
+<script src="../assets/geojson/europe.js"></script>
+<script src="../assets/geojson/africa.js"></script>
 
 <!--This actually renders the map-->
 <script src="../api/leaflet/leaflet.js"></script>
