changed country_genres to a json file

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,9 @@
     </div>
 </body>
 
+<!--Call the country_genres file to initialize all the genres-->
+<script src="../assets/genres/country_genres.js"></script>
+
 <!--Call the countries' files first so that leaflet.js can access the global variables (avoids using modules)-->
 <script src="../assets/geojson/north_america.js"></script>
 <script src="../assets/geojson/south_america.js"></script>
