--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
 <!--Call the country_genres file to initialize all the genres-->
 <script src="../assets/genres/country_genres.js"></script>
+<script src="../api/spotify/get_similar_songs/similar.js"></script>
 
 <!--Call the countries' files first so that leaflet.js can access the global variables (avoids using modules)-->
 <script src="../assets/geojson/north_america.js"></script>
